# liquidity-book-leptos

./: .gitignore  404.html  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  input.css  manifest.json  tailwind.config.js  taplo.toml
.github/workflows/: static.yml
app/: Cargo.toml  README.md  Trunk.toml  dev_manifest.json  index.html  manifest.json  tailwind.config.js
app/public/: test_tokens_pulsar.json
app/src/: constants.rs  error.rs  lib.rs  prelude.rs  routes.rs
app/src/components/: mod.rs  user_menu.rs
app/src/routes/: home.rs  nav.rs  pool.rs  trade.rs
app/src/routes/pool/: pool_creator.rs  pool_manager.rs
app/src/routes/pool/pool_manager/: add_liquidity.rs  remove_liquidity.rs
app/src/types/: mod.rs
app/style/: input.css
components/: Cargo.toml
components/src/: lib.rs  loading_modal.rs  secret20_balance.rs  secret_query.rs  user_menu.rs
core/: Cargo.toml
core/src/: constants.rs  lib.rs  utils.rs
core/src/support/: query_helpers.rs
core/src/types/: basic.rs  mod.rs
crates/ammber_sdk/: Cargo.toml
crates/ammber_sdk/deployments/: lb_contracts_dev.json  lb_contracts_pulsar.json
crates/ammber_sdk/src/: curves.rs  lib.rs  utils.rs
crates/ammber_sdk/src/constants/: addrs.rs  liquidity_config.rs  mod.rs
crates/batch_query/: Cargo.toml
crates/batch_query/src/: lib.rs  types.rs
crates/charts/: Cargo.toml  Trunk.toml  index.html
crates/charts/demo/: demo.rs
crates/charts/src/: lib.rs
crates/components/src/: secret20_balance.rs  spinner2.rs  suggest_chains.rs
crates/core/src/: lib.rs
crates/keplr/: Cargo.toml
crates/keplr/src/: enigma_utils.rs  error.rs  lib.rs  signers.rs  tokens.rs
docs/: tokens.md
features/pool/: Cargo.toml
features/pool/src/: lib.rs  pool.rs  routes.rs  state.rs
features/pool/src/pool/: pool_analytics.rs  pool_browser.rs  pool_creator.rs  pool_manager.rs
features/pool/src/pool/pool_manager/: add_liquidity.rs  remove_liquidity.rs
features/swap/: Cargo.toml
features/swap/src/: keyboard_shortcuts.rs  lib.rs  routes.rs  swap.rs  swap_details.rs  swap_settings.rs
public/: lb_contracts_dev.json  lb_contracts_pulsar.json  test_tokens_pulsar.json
src/: constants.rs  error.rs  lib.rs  liquidity_book.rs  main.rs  routes.rs  state.rs  utils.rs
src/batch_query/: mod.rs
src/components/: animated_show.rs  mod.rs  secret20_balance.rs  secret_query.rs  spinner2.rs  suggest_chain.rs  suggest_chains.rs  user_menu.rs
src/keplr/: error.rs  experimental.rs  keplr.rs  mod.rs  signers.rs  tokens.rs
src/liquidity_book/: contract_interfaces.rs  curves.rs  mod.rs  utils.rs
src/liquidity_book/constants/: addrs.rs  liquidity_config.rs
src/routes/: analytics.rs  home.rs  nav.rs  pool.rs  trade.rs
src/routes/pool/: add_liquidity.rs  pool_analytics.rs  pool_browser.rs  pool_creator.rs  pool_manager.rs  remove_liquidity.rs
src/routes/pool/pool_manager/: add_liquidity.rs  remove_liquidity.rs
src/support/: mod.rs  query_helpers.rs
src/types/: basic.rs
