[package]
name = "liquidity-book-leptos"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/ammber_sdk", "crates/batch_query", "crates/keplr", "crates/charts"]
resolver = "2"

[workspace.lints.clippy]
too_many_arguments = "allow"

[profile.dev]
# Potential to opt-in on higher optimization for our code. This may increase incremental compilation times, but will reduce binary size.
opt-level = 0
[profile.dev.package."*"]
# High optimization for our dependencies. This should increase performance drastically whithout hitting our incremental compilation times.
# This will lead to obscure error messages from third party libraries. Comment this out when experiencing a tricky bug.
opt-level = 3

[profile.release]
opt-level = "z"
lto = "fat"
debug = 0
strip = true
codegen-units = 1

[build-dependencies]
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.dependencies]
leptos = { version = "0.7.4", features = ["csr"] }

[dependencies]

# workspace crates
ammber-sdk = { path = "./crates/ammber_sdk" }
batch-query = { path = "./crates/batch_query", package = "secret-batch-query" }
keplr = { path = "./crates/keplr" }
ammber-charts = { path = "./crates/charts" }

# Leptos official
leptos = { workspace = true }
leptos_router = { version = "0.7.4", features = [] }
leptos_router_macro = { version = "0.7.4" }
leptos_meta = { version = "0.7.4" }
reactive_stores = { version = "0.1.3" }

# Leptos extensions and related
# thaw = { version = "0.4.1", features = ["csr"] }
# leptos_icons = { version = "0.5.0" }
# icondata = "0.5"
# leptos-struct-table = "0.14.0-beta"
leptos-use = { version = "0.15.3", default-features = false, features = ["storage"] }
codee = { version = "0.2", features = ["json_serde", "json_serde_wasm", "base64", "prost"] }
# leptonic = { git = "https://github.com/lpotthast/leptonic.git", branch = "migrate-to-leptos-0.7" }
lucide-leptos = "1.1.0"

# gRPC
tonic = { version = "0.12.2", default-features = false }
prost = { version = "0.13.4" }

# Web support
console_error_panic_hook = "0.1.7"
web-sys = "0.3.76"
wasm-bindgen-futures = "0.4.49"
send_wrapper = { version = "0.6.0", features = ["futures"] }
serde-wasm-bindgen = "0.6.5"
tonic-web-wasm-client = "0.6.0"
# gloo-net = "0.6"
# gloo-storage = "0.3"

# Classic
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde-json-wasm = "1.0.1"
base64 = "0.22.1"
futures = "0.3.31"
async-trait = "0.1.84"
thiserror = "2.0.9"
hex-literal = "0.4.1"

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-subscriber-wasm = "0.1.0"

# Secret
keplr-sys = "0.0.3"
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" }
secret-toolkit-snip20 = { version = "0.10.2" }
secretrs = { version = "0.1.3", default-features = false }
rsecret = { git = "https://github.com/kent-3/secret-clients", branch = "main" }

#
liquidity-book = { git = "https://github.com/kent-3/liquidity-book.git" }
ethnum = "1.5.0"

[patch.crates-io]
secret-sdk-proto = { git = "https://github.com/kent-3/secret-rust", branch = "main" }
secretrs = { git = "https://github.com/kent-3/secret-rust", branch = "main" }

# Uncomment during local development

# [patch."https://github.com/securesecrets/shade.git"]
# shade-protocol = { path = "../shade/packages/shade_protocol" }

# [patch."https://github.com/kent-3/secret-clients.git"]
# rsecret = { path = "../secret-clients/rsecret" }

# [patch."https://github.com/kent-3/liquidity-book.git"]
# liquidity-book = { path = "../liquidity-book/packages/liquidity-book" }

# [patch.crates-io]
# keplr-sys = { path = "../keplr/keplr-sys" }
# secretrs = { path = "../secret-rust/secretrs" }
