[package]
name = "liquidity-book-leptos"
version = "0.1.0"
edition = "2021"

[features]
default = ["testnet"]
mainnet = []
testnet = []
devnet = []

[workspace]
members = ["crates/ammber_sdk", "crates/batch_query", "crates/keplr", "crates/charts"]
resolver = "2"

[workspace.lints.clippy]
too_many_arguments = "allow"

[profile.dev]
# Potential to opt-in on higher optimization for our code. This may increase incremental compilation times, but will reduce binary size.
opt-level = 0
[profile.dev.package."*"]
# High optimization for our dependencies. This should increase performance drastically whithout hitting our incremental compilation times.
# This will lead to obscure error messages from third party libraries. Comment this out when experiencing a tricky bug.
opt-level = 3

[profile.release]
opt-level = "z"
lto = "fat"
debug = 0
strip = true
codegen-units = 1

[build-dependencies]
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.dependencies]
# Leptos and friends
leptos = { version = "0.7.8", features = ["csr"] }
leptos_router = { version = "0.7.8" }
leptos_router_macro = { version = "0.7.8" }
leptos_meta = { version = "0.7.8" }
leptos-use = { version = "0.15.7", default-features = false, features = ["storage"] }
reactive_stores = { version = "0.1.8" }
lucide-leptos = "1.1.0"

# Secret Network
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" }
secret-toolkit-snip20 = { version = "0.10.3" }
secretrs = { version = "0.1.4", default-features = false }
rsecret = { git = "https://github.com/kent-3/secret-clients", branch = "main" }
keplr-sys = "0.0.3"

# Web & WASM
web-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
send_wrapper = { version = "0.6.0", features = ["futures"] }
serde-wasm-bindgen = "0.6.5"
tonic-web-wasm-client = "0.6.2"
console_error_panic_hook = "0.1.7"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-json-wasm = "1.0.1"
base64 = "0.22.1"

# Utilities
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-subscriber-wasm = "0.1.0"
futures = "0.3.31"
async-trait = "0.1.88"
thiserror = "2.0.12"
codee = { version = "0.3.0", features = ["json_serde", "json_serde_wasm", "base64", "prost"] }
ethnum = "1.5.0"

# gRPC
tonic = { version = "0.12.2", default-features = false }
prost = { version = "0.13.5" }

# liquidity Book
liquidity-book = { git = "https://github.com/kent-3/liquidity-book.git" }

[dependencies]
# Workspace crates
ammber-sdk = { path = "./crates/ammber_sdk" }
batch-query = { path = "./crates/batch_query", package = "secret-batch-query" }
keplr = { path = "./crates/keplr" }
ammber-charts = { path = "./crates/charts" }

# Leptos and related
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_router_macro = { workspace = true }
leptos_meta = { workspace = true }
leptos-use = { workspace = true }
reactive_stores = { workspace = true }
lucide-leptos = { workspace = true }
codee = { workspace = true }

# Secret Network
cosmwasm-std = { workspace = true }
secret-toolkit-snip20 = { workspace = true }
secretrs = { workspace = true }
rsecret = { workspace = true }
keplr-sys = { workspace = true }

# Web support
web-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
send_wrapper = { workspace = true }
serde-wasm-bindgen = { workspace = true }
tonic-web-wasm-client = { workspace = true }
console_error_panic_hook = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde-json-wasm = { workspace = true }
base64 = { workspace = true }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-subscriber-wasm = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
ethnum = { workspace = true }
hex-literal = "1.0.0"

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Liquidity Book
liquidity-book = { workspace = true }

[patch.crates-io]
secret-sdk-proto = { git = "https://github.com/kent-3/secret-rust", branch = "main" }
secretrs = { git = "https://github.com/kent-3/secret-rust", branch = "main" }

# Uncomment during local development

# [patch."https://github.com/kent-3/secret-clients.git"]
# rsecret = { path = "../secret-clients/rsecret" }

# [patch."https://github.com/kent-3/liquidity-book.git"]
# liquidity-book = { path = "../liquidity-book/packages/liquidity-book" }

# [patch.crates-io]
# keplr-sys = { path = "../keplr/keplr-sys" }
# secretrs = { path = "../secret-rust/secretrs" }
