[workspace]
resolver = "2"
members = [
  "app",
  "core",
  "components",
  "features/pool",
  "features/swap",
  "crates/ammber_sdk",
  "crates/batch_query",
  "crates/keplr",
  "crates/charts",
]

[workspace.dependencies]
# Workspace crates
ammber-core = { path = "core" }
ammber-components = { path = "components" }
ammber-charts = { path = "crates/charts" }
ammber-swap = { path = "features/swap" }
ammber-pool = { path = "features/pool" }
ammber-sdk = { path = "crates/ammber_sdk" }
batch-query = { path = "crates/batch_query", package = "secret-batch-query" }
keplr = { path = "crates/keplr" }

# Leptos and friends
leptos = { version = "0.7.8", features = ["csr"] }
leptos_router = { version = "0.7.8" }
leptos_router_macro = { version = "0.7.8" }
leptos_meta = { version = "0.7.8" }
leptos-use = { version = "0.15.7", default-features = false, features = ["storage"] }
reactive_stores = { version = "0.1.8" }
lucide-leptos = "1.1.0"

# Secret Network
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" }
secret-toolkit-snip20 = { version = "0.10.3" }
secretrs = { version = "0.1.4", default-features = false }
rsecret = { git = "https://github.com/kent-3/secret-clients" }
keplr-sys = "0.0.3"

# Web & WASM
web-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
send_wrapper = { version = "0.6.0", features = ["futures"] }
serde-wasm-bindgen = "0.6.5"
tonic-web-wasm-client = "0.6.2"
console_error_panic_hook = "0.1.7"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-json-wasm = "1.0.1"
base64 = "0.22.1"

# Utilities
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-subscriber-wasm = "0.1.0"
futures = "0.3.31"
async-trait = "0.1.88"
thiserror = "2.0.12"
codee = { version = "0.3.0", features = [
  "json_serde",
  "json_serde_wasm",
  "base64",
  "prost",
] }
ethnum = "1.5.0"
hex-literal = "1.0.0"

# gRPC
tonic = { version = "0.12.2", default-features = false }
prost = { version = "0.13.5" }

# liquidity Book
liquidity-book = { git = "https://github.com/kent-3/liquidity-book.git" }


# [patch.crates-io]
# keplr-sys = { path = "../keplr/keplr-sys" }
# secret-sdk-proto = { path = "../secret-rust/secret-sdk-proto/" }
# secretrs = { path = "../secret-rust/secretrs" }

# [patch."https://github.com/kent-3/secret-clients.git"]
# rsecret = { path = "../secret-clients/rsecret" }

# [patch."https://github.com/kent-3/liquidity-book.git"]
# liquidity-book = { path = "../liquidity-book/packages/liquidity-book" }


# Potential to opt-in on higher optimization for our code. This may increase incremental compilation times, but will reduce binary size.
[profile.dev]
opt-level = 0

# High optimization for our dependencies. This should increase performance drastically without hitting our incremental compilation times.
# This will lead to obscure error messages from third party libraries. Comment this out when experiencing a tricky bug.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
debug = 0
strip = true

[workspace.lints.clippy]
# too_many_arguments = "allow"
