[package]
name = "liquidity-book-leptos"
version = "0.1.0"
edition = "2021"

[features]
mainnet = []
testnet = ["ammber-core/testnet"]
devnet = []
charts = []
default = ["testnet"]

[dependencies]
# Workspace crates
ammber-core.workspace = true
ammber-components.workspace = true
ammber-swap.workspace = true
ammber-pool.workspace = true
ammber-sdk.workspace = true
batch-query.workspace = true
keplr.workspace = true
ammber-charts.workspace = true

# Leptos and related
leptos.workspace = true
leptos_router.workspace = true
leptos_router_macro.workspace = true
leptos_meta.workspace = true
leptos-use.workspace = true
reactive_stores.workspace = true
lucide-leptos.workspace = true
codee.workspace = true

# Secret Network
cosmwasm-std.workspace = true
secret-toolkit-snip20.workspace = true
secretrs.workspace = true
rsecret.workspace = true
keplr-sys.workspace = true

# Web support
web-sys.workspace = true
wasm-bindgen-futures.workspace = true
send_wrapper.workspace = true
serde-wasm-bindgen.workspace = true
tonic-web-wasm-client.workspace = true
console_error_panic_hook.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde-json-wasm.workspace = true
base64.workspace = true

# Utilities
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-subscriber-wasm.workspace = true
futures.workspace = true
async-trait.workspace = true
thiserror.workspace = true
ethnum.workspace = true
hex-literal.workspace = true

# gRPC
tonic.workspace = true
prost.workspace = true

# Liquidity Book
liquidity-book.workspace = true
