[package]
name = "ammber-components"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace crates
ammber-core.workspace = true
keplr.workspace = true

# Leptos and related
leptos.workspace = true
lucide-leptos.workspace = true

# Secret Network
cosmwasm-std.workspace = true
secret-toolkit-snip20.workspace = true
secretrs.workspace = true
rsecret.workspace = true

# Web support
web-sys.workspace = true
send_wrapper.workspace = true
tonic-web-wasm-client.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
tracing.workspace = true
thiserror.workspace = true

# Liquidity Book
liquidity-book.workspace = true
