[package]
name = "ammber-core"
version = "0.1.0"
edition = "2021"

[features]
mainnet = []
testnet = []
devnet = []

[build-dependencies]
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
# Workspace crates
ammber-sdk.workspace = true
batch-query.workspace = true
keplr.workspace = true

# Leptos and related
leptos.workspace = true
reactive_stores.workspace = true

# Secret Network
cosmwasm-std.workspace = true
secret-toolkit-snip20.workspace = true
secretrs.workspace = true
rsecret.workspace = true

# Web support
web-sys.workspace = true
send_wrapper.workspace = true
serde-wasm-bindgen.workspace = true
tonic-web-wasm-client.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true
hex-literal.workspace = true

# Liquidity Book
liquidity-book.workspace = true
