[package]
name = "ammber-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tracing = "0.1.41"

ethnum = { version = "1.5.0", features = ["serde"] }
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" }
liquidity-book = { git = "https://github.com/kent-3/liquidity-book.git" }

# TODO: try to avoid this dependency
leptos = { version = "0.7.3", features = ["csr"] }
