[package]
name = "ammber-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

base64 = { workspace = true }

cosmwasm-std = { workspace = true }
liquidity-book = { workspace = true }

ethnum = { workspace = true, features = ["serde"] }

tracing = { workspace = true }

# TODO: avoid this
leptos = { workspace = true }
