[package]
name = "keplr"
version = "0.1.0"
edition = "2021"

[dependencies]
keplr-sys.workspace = true

cosmwasm-std.workspace = true
secretrs.workspace = true
rsecret.workspace = true

web-sys.workspace = true
send_wrapper.workspace = true
serde-wasm-bindgen.workspace = true

serde.workspace = true
serde_json.workspace = true
base64.workspace = true

tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true
